# legai

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
legai/: main.py
